--- a/.github/workflows/update-schema.yml
+++ b/.github/workflows/update-schema.yml
@@ -5,24 +5,22 @@ on:
     types: update-schema
   schedule:
     - cron: "0 * * * *"
+  workflow_dispatch: {} # Allow manually kicking off builds
 
 jobs:
   check_for_update:
     name: Check for schema update
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Copy deploy key to ~/.ssh
-      env:
-        DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
-      run: |
-        mkdir -p ~/.ssh
-        echo "$DEPLOY_KEY" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 1
+
     - name: Set up Node 14
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
         node-version: 14.x
+
     - name: Cache npm packages
       uses: actions/cache@v1
       env:
@@ -34,16 +32,17 @@ jobs:
           ${{ runner.os }}-build-${{ env.cache-name }}-
           ${{ runner.os }}-build-
           ${{ runner.os }}-
+
     - name: Install npm packages
       working-directory: ./tools/update-schema
       run: npm install
+
     - name: Run update-schema tool
       working-directory: ./tools/update-schema
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.SCHEMABOT_ACCESS_TOKEN }}
-        REPO_WORKING_DIRECTORY: ./working
+        REPO_WORKING_DIRECTORY: ./../../
         GIT_NAME: schemabot
-        GIT_EMAIL: schemabot@horner.tj
-        GIT_PRIVATE_KEY_PATH: ~/.ssh/id_rsa
+        GIT_EMAIL: durov2005@gmail.com
         NODE_NO_WARNINGS: "1"
       run: node index
